make this ru-formattable

--- a/html/component.html
+++ b/html/component.html
@@ -36,11 +36,9 @@ is covered, so ours will be starring a Danish <span name="baker">baker</span>,
 Bj&oslash;rn. It stands to reason that we&#8217;ll have a class representing our
 friendly pastry chef, and it will contain everything he does in the game.</p>
 <aside name="baker">
-
 <p>Brilliant game ideas like this are why I&#8217;m a programmer and not a
 designer.</p>
 </aside>
-
 <p>Since the player controls him, that means reading controller input
 and translating that to motion. And, of course, he needs to interact
 with the level, so some physics and collision goes in there. Once that&#8217;s done, he&#8217;s got to show up on screen, so toss in animation and
@@ -75,7 +73,6 @@ giant knotted ball of code like:</p>
 know something about physics, graphics, and sound just to make sure
 they don&#8217;t break anything.</p>
 <aside name="coupling">
-
 <p>While coupling like this sucks in <em>any</em> game, it&#8217;s even worse on
 modern games that use concurrency. On multi-core hardware, it&#8217;s vital
 that code is running on multiple threads simultaneously. One common
@@ -87,7 +84,6 @@ single class with an <code>UpdateSounds()</code> method that must be called from
 one thread and a <code>RenderGraphics()</code> method that must be called from
 another is just begging for those kinds of bugs to happen.</p>
 </aside>
-
 <p>These two problems compound each other: the class touches so many
 domains that every programmer will have to work on it, but it&#8217;s so huge
 that doing so is a nightmare. If it gets bad enough, coders will start
@@ -126,7 +122,6 @@ be touched: boxes, boulders, and trees. <em>Zones</em> are the opposite of
 decorations: invisible but interactive. They&#8217;re useful for things like
 triggering a cutscene when Bj&oslash;rn enters an area.</p>
 <aside name="inheritance">
-
 <p>When object-oriented programming first hit the scene, inheritance was
 the shiniest tool in its toolbox. It was considered the ultimate
 code-reuse hammer and coders swung it often. Since then, we&#8217;ve learned
@@ -137,7 +132,6 @@ instead of inheritance when possible. Instead of sharing code between
 two classes by having them <em>inherit</em> from the same class, we do so by
 having them both <em>own an instance</em> of the same class.</p>
 </aside>
-
 <p>Now consider how we&#8217;d set up an inheritance hierarchy for those
 classes if we weren&#8217;t using components. A first pass might look like:</p>
 <p><img src="images/component-uml.png" /></p>
@@ -149,14 +143,12 @@ code. However, <code>Prop</code> can&#8217;t <em>also</em> inherit from <code>De
 the rendering code without running into the
 <span name="diamond">Deadly Diamond</span>.</p>
 <aside name="diamond">
-
 <p>The &#8220;Deadly Diamond&#8221; occurs in class hierarchies with
 multiple inheritance where there are two different paths to the same
 base class. The pain that causes is a bit out of the scope of this
 book, but just understand that they named it &#8220;deadly&#8221; for
 a reason.</p>
 </aside>
-
 <p>We could flip things around so that <code>Prop</code> inherits from <code>Decoration</code>,
 but then we end up having to duplicate the collision code. Either way,
 there&#8217;s no clean way to reuse the collision and rendering code between
@@ -172,13 +164,11 @@ simply a <code>GameObject</code> with a <code>GraphicsComponent</code> but no
 components. No code duplication, no multiple inheritance, and only
 three classes instead of four.</p>
 <aside name="menu">
-
 <p>A restaurant menu is a good analogy. Defining classes for each entity
 is a menu that only lets you order combos. We need to have a separate
 class for each possible <em>combination</em> of features. To satisfy every
 customer, we need dozens of combos. Components are &agrave; la carte: each customer can select just the dishes they want, and the menu is just a list of the dishes they can choose from.</p>
 </aside>
-
 <p>Components are basically plug-and-play for objects. They let us build
 complex entities with rich behavior by just plugging in different
 reusable component objects into sockets on the entity. Think software
@@ -190,7 +180,6 @@ of the original class&#8217;s behavior that is specific to one domain. The
 original monolithic class becomes a <strong>container</strong> class that is a
 shell for these components.</p>
 <aside name="component">
-
 <p>&#8220;Component&#8221;, like &#8220;Object&#8221;, is one of those
 words that means everything and nothing in programming. Because of
 that, it&#8217;s been used to describe a few concepts. In business software,
@@ -203,7 +192,6 @@ practices, I don&#8217;t have the luxury of coining a new term. So,
 following in the footsteps of XNA, Delta3D, and others,
 &#8220;Component&#8221; it is.</p>
 </aside>
-
 <h2><a href="#when-to-use-it" name="when-to-use-it">When to Use It</a></h2>
 <p>Components are most commonly found within the core class that defines
 the entities in a game, but may be useful in other places as well.
@@ -239,14 +227,12 @@ container object, first you have to get the component you want, <em>then</em>
 you can do what you need. In <span name="perf">performance</span> critical inner loops, this
 pointer following may lead to poor performance.</p>
 <aside name="perf">
-
 <p>There&#8217;s a flip side to this coin. The Component pattern can often
 <em>improve</em> performance and cache coherence. Components make it
 easier to use the <a class="pattern" href="data-locality.html">
 Data Locality</a> pattern to organize your data in the order
 that the CPU wants it.</p>
 </aside>
-
 <h2><a href="#sample-code" name="sample-code">Sample Code</a></h2>
 <p>One of the biggest challenges for me in writing this book is figuring
 out how to isolate each pattern. Many design patterns exist to contain
@@ -265,7 +251,6 @@ going for.</p>
 <h3><a href="#a-monolithic-class" name="a-monolithic-class">A monolithic class</a></h3>
 <p>To get a clearer picture of how this pattern is applied, we&#8217;ll start by showing a monolithic <span name="cat"><code>Bjorn</code></span> class that does everything we need but <em>doesn&#8217;t</em> use this pattern:</p>
 <aside name="cat">
-
 <p>I should point out that using the actual name of the character in the
 codebase is usually a bad idea. The marketing department has an
 annoying habit of demanding name changes days before you ship.
@@ -276,7 +261,6 @@ that and because it&#8217;s more fun to tell people you&#8217;re working on
 &#8220;Big Electric Cat&#8221; than just &#8220;the next version of
 Photoshop.&#8221;</p>
 </aside>
-
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">Bjorn</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
@@ -592,11 +576,9 @@ reuse all of the other code for Bj&oslash;rn&thinsp;&mdash;&thinsp;physics and
 graphics don&#8217;t even know there&#8217;s a difference. Maybe I&#8217;m a bit
 strange, but it&#8217;s stuff like this that gets me up in the <span name="coffee">morning</span>.</p>
 <aside name="coffee">
-
 <p>That, and coffee. Sweet, steaming hot coffee.</p>
 </aside>
-
-<h3><a href="#no-bj&oslash;rn-at-all" name="no-bj&oslash;rn-at-all">No Bj&oslash;rn at all?</a></h3>
+<h3><a href="#no-bj&oslash;rn-at-all?" name="no-bj&oslash;rn-at-all?">No Bj&oslash;rn at all?</a></h3>
 <p>If you look at our <code>Bjorn</code> class now, you&#8217;ll notice there&#8217;s nothing
 really &#8220;Bj&oslash;rn&#8221; about it&thinsp;&mdash;&thinsp;it&#8217;s just a
 component bag. In fact, it looks like a pretty good candidate for a
@@ -653,11 +635,9 @@ uses those interfaces:</p>
 
 
 <aside name="id">
-
 <p>Some component systems take this even farther. Instead of a <code>GameObject</code> that contains its components, the game entity is just an ID, a number. Then you maintain separate collections of components where each one knows the ID of the entity its attached to.</p>
 <p>These <a href="http://en.wikipedia.org/wiki/Entity_component_system">entity component systems</a> take decoupling components to the extreme and let you add new components to an entity without the entity even knowing. The <a href="data-locality.html" class="pattern">Data Locality</a> chapter has more details.</p>
 </aside>
-
 <p>Our existing concrete classes will get renamed and implement those interfaces:</p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">BjornPhysicsComponent</span> <span class="o">:</span> <span class="k">public</span> <span class="n">PhysicsComponent</span>
 <span class="p">{</span>
@@ -693,13 +673,11 @@ this:</p>
 
 
 <aside name="factory">
-
 <p>This <code>createBjorn()</code> function is, of course, an example of the classic
 Gang of Four <a class="gof-pattern"
 href="http://c2.com/cgi/wiki?FactoryMethod">Factory Method</a>
 pattern.</p>
 </aside>
-
 <p>By defining other functions that instantiate <code>GameObjects</code> with
 different components, we can create all of the different kinds of
 objects our game needs.</p>
@@ -710,7 +688,7 @@ there is going to depend on the needs and genre of your game. The
 bigger and more complex your engine is, the more finely you&#8217;ll likely
 want to slice your components.</p>
 <p>Beyond that, there are a couple of more specific options to consider:</p>
-<h3><a href="#how-does-the-object-get-its-components" name="how-does-the-object-get-its-components">How does the object get its components?</a></h3>
+<h3><a href="#how-does-the-object-get-its-components?" name="how-does-the-object-get-its-components?">How does the object get its components?</a></h3>
 <p>Once we&#8217;ve split up our monolithic object into a few separate
 component parts, we have to decide who puts the parts back together.</p>
 <ul>
@@ -753,7 +731,7 @@ component parts, we have to decide who puts the parts back together.</p>
 </ul>
 </li>
 </ul>
-<h3><a href="#how-do-components-communicate-with-each-other" name="how-do-components-communicate-with-each-other">How do components communicate with each other?</a></h3>
+<h3><a href="#how-do-components-communicate-with-each-other?" name="how-do-components-communicate-with-each-other?">How do components communicate with each other?</a></h3>
 <p>Perfectly decoupled components that function in isolation is a nice
 ideal, but doesn&#8217;t really work in practice. The fact that these
 components are part of the <em>same</em> object implies that they are part of
@@ -1010,7 +988,7 @@ that point, it really is behaving more akin to a strategy.</p>
 </li>
 </ul>
 <nav>
-  <span class="prev">&larr; <a href="decoupling-patterns.html">Previous Chapter</a></span>
+  <span class="prev">&larr; <a href="decoupling-patterns.html">Предыдущая глава</a></span>
   <span class="next"><a href="event-queue.html">Next Chapter</a> &rarr;</span>
   <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
 </nav>
