--- a/html/decoupling-patterns.html
+++ b/html/decoupling-patterns.html
@@ -37,7 +37,7 @@
 <li><a href="service-locator.html">Service Locator</a></li>
 </ul>
 <nav>
-  <span class="prev">&larr; <a href="type-object.html">Previous Chapter</a></span>
+  <span class="prev">&larr; <a href="type-object.html">Предыдущая глава</a></span>
   <span class="next"><a href="component.html">Next Chapter</a> &rarr;</span>
   <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
 </nav>
