--- a/html/design-patterns-revisited.html
+++ b/html/design-patterns-revisited.html
@@ -40,7 +40,7 @@
 <li><a href="state.html">State</a></li>
 </ul>
 <nav>
-  <span class="prev">&larr; <a href="architecture-performance-and-games.html">Previous Chapter</a></span>
+  <span class="prev">&larr; <a href="architecture-performance-and-games.html">Предыдущая глава</a></span>
   <span class="next"><a href="command.html">Next Chapter</a> &rarr;</span>
   <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
 </nav>
