--- a/html/introduction.html
+++ b/html/introduction.html
@@ -41,10 +41,8 @@ lines long:</p>
 
 
 <aside name="short">
-
 <p>This is learning the value of short, simple code the hard way.</p>
 </aside>
-
 <p>Even so, the process was fraught with peril. We didn&#8217;t know <em>how</em> to
 program, so a tiny syntax error was impenetrable to us. If the program
 didn&#8217;t work, which was often, we started over from scratch.</p>
@@ -67,13 +65,11 @@ little puzzle&thinsp;&mdash;&thinsp;but as I added features it got harder and ha
 Once I couldn&#8217;t fit the entire program in my head anymore, it was
 doomed.</p>
 <aside name="snakes">
-
 <p>A good chunk of my time was also spent catching snakes and turtles in
 the swamps of southern Louisiana. If it wasn&#8217;t so blisteringly hot
 outside, there&#8217;s a good chance this would be a herpetology book
 instead of a programming one.</p>
 </aside>
-
 <p>At first, the challenge was just getting something on screen. Now it
 became figuring out how to write programs bigger than would fit in my
 head. Instead of just reading about &#8220;How to Program in
@@ -87,10 +83,8 @@ was such a relief to see that other people struggled too, and came up
 with solutions. I felt like I finally had a couple of <em>tools</em> to use
 instead of just my bare hands.</p>
 <aside name="friend">
-
 <p>This was the first time I&#8217;d met a friend of my best friend, and five minutes after meeting him, I sat down on his couch and spent the next few hours completely ignoring him and reading. I&#8217;d like to think my social skills have improved at least a little since then.</p>
 </aside>
-
 <p>In 2001, I landed my dream job: software engineer at Electronic Arts.
 I would be a real game programmer! I couldn&#8217;t wait to get a look at
 some real games and see how the pros put them together. How did they
@@ -144,10 +138,8 @@ write another?</p>
 <p>The second category covers that, but I find it often too monolithic and too genre-specific. Especially with the rise of mobile and casual gaming, we&#8217;re in a period where lots of different genres of games are being created. We aren&#8217;t all just cloning Quake anymore. Books that walk you through a single engine aren&#8217;t a good fit when <em>your</em> game doesn&#8217;t fit that mold.</p>
 <p>Instead, what I&#8217;m trying to do here is more <span name="carte"><em>&agrave; la carte</em></span>. Each of the chapters in this book is an independent idea that you can apply to your code. This way, you can mix and match them in a way that works best for the game <em>you</em> want to make.</p>
 <aside name="carte">
-
 <p>Another example of this <em>&agrave; la carte</em> style is the widely beloved <a href="http://www.satori.org/game-programming-gems/"><em>Game Programming Gems</em></a> series.</p>
 </aside>
-
 <h2><a href="#how-it-relates-to-design-patterns" name="how-it-relates-to-design-patterns">How it Relates to Design Patterns</a></h2>
 <p>Any programming book with <span name="alexander">&#8220;Patterns&#8221;</span> in its name clearly
 bears a relationship to the classic <em>Design Patterns: Elements of
@@ -155,11 +147,9 @@ Reusable Object-Oriented Software</em> by Erich Gamma, Richard Helm, Ralph
 Johnson and John Vlissides (ominously called the &#8220;Gang of
 Four&#8221;).</p>
 <aside name="alexander">
-
 <p><em>Design Patterns</em> itself was in turn inspired by a previous book. The idea of crafting a language of patterns to describe open-ended solutions to problems comes from <a href="http://en.wikipedia.org/wiki/A_Pattern_Language"><em>A Pattern Language</em></a>, by Christopher Alexander (along with Sarah Ishikawa and Murray Silverstein).</p>
 <p>Their book was about architecture (like <em>real</em> architecture with buildings and walls and stuff), but they hoped others would use the same structure to describe solutions in other fields. <em>Design Patterns</em> is the Gang of Four&#8217;s attempt to do that for software.</p>
 </aside>
-
 <p>By calling this book &#8220;Game Programming Patterns,&#8221; I
 certainly don&#8217;t intend to imply that the Gang of Four&#8217;s book is
 <span name="nongames">inapplicable</span> to games. On the contrary: the second part of this book revisits
@@ -197,7 +187,7 @@ an <em>extension</em> of it. While the patterns introduced here are useful in ot
 <h2><a href="#how-to-read-the-book" name="how-to-read-the-book">How to Read the Book</a></h2>
 <p>The book is broken into three broad parts. The first introduces and frames the book. It&#8217;s the chapter you&#8217;re reading now along with the <a href="architecture-performance-and-games.html">next one</a>.</p>
 <p>The second part, <a href="design-patterns-revisited.html">&#8220;Design Patterns Revisited&#8221;</a>, goes through a handful of patterns from the Gang of Four book. With each one, I give my spin on it and how I think it relates to game programming.</p>
-<p>Finally, the last part is the real meat of the book. It presents thirteen new design patterns that I&#8217;ve found in games. They&#8217;re grouped into four sections: <a href="sequencing-patterns.html">Sequencing Patterns</a>, <a href="behavioral-patterns.html">Behavioral Patterns</a>, <a href="decoupling-patterns.html">Decoupling Patterns</a>, and <a href="optimization-patterns.html">Optimization Patterns</a>.</p>
+<p>Finally, the last part is the real meat of the book. It presents thirteen new design patterns that I&#8217;ve found in games. They&#8217;re grouped into four sections: <a href="sequencing-patterns.html">Sequencing Patterns</a>, <a href="behavioral-patterns.html">Behavioral Patterns</a>, <a href="decoupling-patterns.html">Decoupling Patterns</a>, and <a href="optimization-patterns.html">Паттерны оптимизации</a>.</p>
 <p>Each pattern within these sections is described using a consistent
 structure so that you can use this book as a reference and quickly
 find what you need:</p>
@@ -254,11 +244,9 @@ Every implementation will include these parts, so it&#8217;s important to
 note them all. The first time one is mentioned, it will be in <strong>bold
 face</strong>.</p>
 <aside name="aside">
-
 <p>Asides, extra information, and dumb jokes are placed in boxes like this one. Feel
 free to skip them if you want.</p>
 </aside>
-
 <p>Code samples are shown using a <code>monospace font</code>.</p>
 <p>When another pattern in this book is mentioned, it will be
 capitalized. Following that will be the page number where the pattern
