--- a/html/behavioral-patterns.html
+++ b/html/behavioral-patterns.html
@@ -37,7 +37,7 @@
 <li><a href="type-object.html">Type Object</a></li>
 </ul>
 <nav>
-  <span class="prev">&larr; <a href="update-method.html">Previous Chapter</a></span>
+  <span class="prev">&larr; <a href="update-method.html">Предыдущая глава</a></span>
   <span class="next"><a href="bytecode.html">Next Chapter</a> &rarr;</span>
   <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
 </nav>
